opam-version: "2.0"
name: "chat"
version: "~dev"
synopsis: "Simple chat server and client"
maintainer: "Vlad Lopalo"
authors: "Vlad Lopalo"
depends: [
  "dune" {>= "1.11.4"}
  "ocaml-base-compiler" {= "4.10.0"}

  "lwt" {= "5.3.0"}
  "lwt_ppx" {= "2.0.1"}
  "mtime" {= "1.2.0"}

  "merlin" {>= "3.3.2"}
  "ocamlformat" {>= "0.11.0"}
  "utop" {>= "2.4.2"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
